--- a/src/templates/products.html
+++ b/src/templates/products.html
@@ -18,7 +18,7 @@
 
 {% block content %}
     <div class="container">
-        <h3>Товары</h3>
+        <div></div>
         <div class="row">
             {% for pr in products %}
                 <div class="col-md-4 text-center">
