--- a/src/templates/products.html
+++ b/src/templates/products.html
@@ -17,8 +17,7 @@
 {% endblock nav_seeds %}
 
 {% block content %}
-    <div class="container">
-        <div></div>
+    <div class="container-fluid" style="">
         <div class="row">
             {% for pr in products %}
                 <div class="col-md-4 text-center">
