products page changed

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -49,6 +49,10 @@
             transition: 0.5s;
         }
 
+        {% block additional_styles %}
+            styles
+        {% endblock additional_styles %}
+
     </style>
 
     <title>
