--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -187,7 +187,7 @@
         <div class="col-md-3 mb-md-0 mb-3">
 
             <!-- Links -->
-            <h5 class="text-uppercase">Links</h5>
+            {% comment %} <h5 class="text-uppercase">Links</h5>
 
             <ul class="list-unstyled">
             <li>
@@ -202,7 +202,7 @@
             <li>
                 <a href="#!">Link 4</a>
             </li>
-            </ul>
+            </ul> {% endcomment %}
 
         </div>
         <!-- Grid column -->
