--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,67 +8,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <style>
-    /*HEADER*/
-        header {
-            color: white;
-            background-image: linear-gradient(45deg, #5A6F5A 0%, #8CA894 50%);
-        }
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
 
-        header h1 {
-            font-weight: bold;
-            font-size: 90px;
-        }
-
-        @media(max-width: 999px) {
-            body {
-                padding: 0;
-            }
-        }
-
-        @media(min-width: 1000px) {
-            body {
-                padding: 50px;
-            }
-        }
-
-        @media(min-width: 2000px) {
-            body {
-                padding-left: 20vw;
-                padding-right: 20vw;
-            }
-        }
-
-        #logo_a {
-            color: white;
-            text-decoration: none;
-            transition: 0.5s;
-        }
-
-        #logo_a:hover {
-            color: rgba(255, 255, 255, 0.8);
-            transition: 0.5s;
-        }
-
-
-        /*FOOTER*/
-        .myfooter {
-            background-image: linear-gradient(45deg, #5A6F5A 0%, #8CA894 50%);
-            margin-top: 27px;
-            color: white;
-        }
-
-        .myfooter a {
-            color: white;
-        }
-
-        /*CUSTOM STYLES*/
 
         {% block additional_styles %}
-            styles
+            additional styles will be loaded here
         {% endblock additional_styles %}
-
-    </style>
 
     <title>
         Дачник - {% block title %}
