--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block title %}
     {{ title }}
 {% endblock title %}
@@ -7,6 +9,10 @@
 {% block page_title %}
     {{ title }}
 {% endblock page_title %}
+
+{% block additional_styles %}
+  <link rel="stylesheet" href="{% static 'styles/product_block.css' %}">
+{% endblock additional_styles %}
 
 <a class="dropdown-item" href="#">Помидоры</a>
 
