--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -17,7 +17,7 @@
 <a class="dropdown-item" href="#">Помидоры</a>
 
 {% block nav_seeds %}
-    {% for pr in seeds %}
+    {% for pr in products.семена %}
         <a class="dropdown-item" href="/products/product?article={{ pr.article }}">{{pr.title}}</a>
     {% endfor %}
 {% endblock nav_seeds %}
