styles for products page

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -75,10 +75,11 @@
 
 
 
-
-    {% block content %}
-        this will be replaced by content
-    {% endblock %}
+    <div class="container content" style="background-color: none;">
+        {% block content %}
+            this will be replaced by content
+        {% endblock %}
+    </div>
 
 
 
