--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -53,3 +53,35 @@
     }
 
     /*CUSTOM STYLES*/
+
+    .contentTitle {
+        font-size:45px;
+        color:#657B66;
+        font-weight:bold;
+    
+    }
+    .contentSubtitle {
+        font-size: 35px;
+        font-weight:bold;
+        color:#708E6E;
+    }
+    .contentNavigation {
+        width: 100%;
+        display: inline-block;
+    border-bottom: 1px #707070 solid;
+    }
+    .navLink {
+        color: #526858;
+        font-size:25px;
+        margin-right: 33px;
+        transition:  0.2s;
+    }
+    .navLink:hover{
+        color: #324136;
+        transition:  0.2s;
+        text-decoration: none;
+    }
+
+    .content {
+        margin-top: 27px;
+    }
