home_page modified

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -23,7 +23,7 @@
     </title>
 </head>
 <body>
-    <header>
+    <header class="{% block hc %}{% endblock %}">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -162,7 +162,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href="http://demidob.site/"> DEM!DOB & EMEL!ANOB</a>
+        <a href="http://demidob.site/">DEM!DOB & EMEL!ANOB</a>
     </div>
     <!-- Copyright -->
 
