--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -54,12 +54,13 @@
 
     /*CUSTOM STYLES*/
 
+    
     .contentTitle {
-        font-size:45px;
+       font-size:45px;
         color:#657B66;
         font-weight:bold;
-    
     }
+
     .contentSubtitle {
         font-size: 35px;
         font-weight:bold;
@@ -68,7 +69,7 @@
     .contentNavigation {
         width: 100%;
         display: inline-block;
-    border-bottom: 1px #707070 solid;
+        border-bottom: 1px #707070 solid;
     }
     .navLink {
         color: #526858;
@@ -85,3 +86,18 @@
     .content {
         margin-top: 27px;
     }
+
+
+
+
+
+
+
+
+.page_block {
+    margin-top: 108px;
+}
+
+.block_content {
+    margin-top: 27px;
+}
