--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -113,13 +113,13 @@
 
 	
 
-		<div class="page_block text-center">
+		<div class="page_block text-center invis">
 
 			<div class="row">
 				
 				<div class="col-md-5 my-auto">
 					<div class="logo_vid_container">
-						<img src="" class="logo_vid"></img>
+						<video src="https://demidob.000webhostapp.com/dch/vids/logo-w.mp4" autoplay loop muted class="logo_vid"></video>
 					</div>
 				</div>
 
