--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -119,7 +119,7 @@
 				
 				<div class="col-md-5 my-auto">
 					<div class="logo_vid_container">
-						<video src="https://demidob.000webhostapp.com/dch/vids/logo-w.mp4" autoplay loop muted class="logo_vid"></video>
+						<video src="https://demidob.000webhostapp.com/dch/vids/logo-w.mp4" autoplay loop muted playsinline class="logo_vid"></video>
 					</div>
 				</div>
 
