--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -22,7 +22,7 @@
                     {% endblock %}
     </title>
 </head>
-<body>
+<body id="body">
     <header class="{% block hc %}{% endblock %}">
         <div class="container">
             <div class="row">
