--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -152,4 +152,5 @@
 	</div>
 
 <script src={% static "scripts/main_page_intro.js" %}></script>
+<script src={% static 'scripts/product_info.js' %}></script>
 {% endblock content %}
