--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -104,3 +104,9 @@
 .block_content {
     margin-top: 27px;
 }
+.contentSubSubTitle {
+    font-size: 20px;
+    color: #657B66;
+    margin-top: 17px;
+    margin-bottom: 17px;
+}
