some mainpage changes

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -38,6 +38,9 @@
 			                    <a href="products/#cat-{{cat}}" class="navLink">{{cat|capfirst}}</a>
 			                {% endfor %}
 			            </div>
+						
+						
+
 					</div>
 
 					
@@ -120,11 +123,31 @@
 			</div>
 	</div>
 					
-	
+	<div class="page_block" id="contacts">
+		<div class="row">
+			<div class="col-md-5 text-center text-md-left my-auto">
+				<div class="contentSubtitle">
+					Контакты:
+				</div>
+			</div>
+			<div class="col-md-7 text-center">
+				<div class="contacts">
+					<hr>				
+					<div class="contentSubSubTitle">
+						Телефон: 44-51-62 
+						<div>
+							<a href="https://vk.com/dachnik_vladimir" target="_blank"><img src="http://demidob.site/dch/imgs/vk.png"  alt=""></a>
+							<img src="http://demidob.site/dch/imgs/viber.png" width="35px"  alt="">
+						</div>
+					</div>
+					<hr>
+				</div>
+			</div>
+		</div>
+		
+	</div>
 
-	
-
-	<div class="page_block text-center invis">
+	<div class="page_block text-center">
 
 		<div class="row">
 			
