--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -51,7 +51,7 @@
                             <a class="nav-link" href="/products/">Товары</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Контакты</a>
+                            <a class="nav-link" href="/#contacts">Контакты</a>
                         </li>
                         <li class="nav-item active dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -120,7 +120,7 @@
                 <a href="/products/">Товары</a>
             </li>
             <li>
-                <a href="#!">Контакты</a>
+                <a href="/#contacts">Контакты</a>
             </li>
             <li>
                 <a href="#!">О семенах</a>
