viber link added

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -136,8 +136,8 @@
 					<div class="contentSubSubTitle">
 						Телефон: 44-51-62 
 						<div>
-							<a href="https://vk.com/dachnik_vladimir" target="_blank"><img src="http://demidob.site/dch/imgs/vk.png"  alt=""></a>
-							<img src="http://demidob.site/dch/imgs/viber.png" width="35px"  alt="">
+							<a href="https://vk.com/dachnik_vladimir" target="_blank"><img src="http://demidob.site/dch/imgs/vk.png"  alt="VK"></a>
+							<a href="https://invite.viber.com/?g2=AQBuZv3uOCxr10tU8t1qE6xWTgbfdks9h%2B4MxzevKcosXCzrYMzl5TOhUQYmhqEw&lang=ru" target="_blank"><img src="http://demidob.site/dch/imgs/viber.png" width="35px"  alt="Viber"></a>
 						</div>
 					</div>
 					<hr>
