--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -110,3 +110,28 @@
     margin-top: 17px;
     margin-bottom: 17px;
 }
+
+
+
+#uplink {
+    padding: 5px;
+
+    position: fixed;
+    left: 100%;
+    top: 100%;
+    transform: translate(-140%, -140%);
+
+    background-color: rgb(155, 132, 151);
+    filter: invert();
+    border-radius: 100%;
+
+    opacity: .3;
+
+    transition: .5s;
+}
+
+#uplink:hover {
+    opacity: .8;
+
+    transition: .5s;
+}
