--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+
+    <script src={% static 'scripts/waveScrollTo.js' %}></script>
 
 
         {% block additional_styles %}
@@ -22,7 +24,7 @@
                     {% endblock %}
     </title>
 </head>
-<body id="body">
+<body id="body" style class>
     <header class="{% block hc %}{% endblock %}">
         <div class="container">
             <div class="row">
@@ -79,6 +81,12 @@
         {% block content %}
             this will be replaced by content
         {% endblock %}
+    </div>
+
+    <div id="uplink" class="invis">
+        <a href="#" onclick="waveScrollTo($('#body').offset().top,500);">
+            <img src="http://demidob.site/dch/imgs/icons/arrow-up-circle.png" alt="↑" width="50px">
+        </a>
     </div>
 
 
